Some charts for INCAS' Shared decision making screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
       .canvas-container {
-        width: 700px;
+        width: 450px;
         height: auto;
         margin: auto;
       }
@@ -22,7 +22,7 @@
     <h1>This is a static radial chart</h1>
 
     <div class="canvas-container">
-      <canvas id="myChart"></canvas>
+      <canvas id="myChart" height="320"></canvas>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -46,20 +46,38 @@
             {
               label: "Oct 15, 2020",
               backgroundColor: "rgba(26, 179, 148, 0.7)",
-              borderColor: "rgba(26, 179, 148, 0.8)",
+              borderColor: "rgba(26, 179, 148, 0.7)",
               data: [9, 5, 2, 7, 3]
             },
             {
               label: "Oct 11, 2020",
-              backgroundColor: "rgba(179, 26, 57, 0.4)",
-              borderColor: "rgba(179, 26, 57, 0.6)",
+              backgroundColor: "#0F4C5C",
+              borderColor: "#0F4C5C",
               data: [8, 5, 10, 1, 4]
             }
           ]
         },
 
         // Configuration options go here
-        options: {}
+        options: {
+          title: {
+            display: true,
+            text: "Health risks",
+            fontFamily: "Open Sans",
+            alignsiiii: "start"
+          },
+          fontFamily: "Open Sans",
+          legend: {
+            display: true,
+            position: "bottom",
+            fullWidth: true,
+
+            labels: {
+              fontColor: "#787878",
+              fontSize: 10
+            }
+          }
+        }
       });
     </script>
   </body>
